[package]
name = "gk-grid"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A grid library for Rust and Bevy, generic over grid shape."
repository = "https://github.com/Rynvosis/gk-grid"
keywords = ["grid","tilemap","bevy"]
categories = ["game-development"]
exclude = ["assets/"]  # demo models; examples only, no need to ship them to crates.io

[dependencies]
bevy = { version = "0.19", optional = true }
glam = "0.32"
hexasphere = "18"

[features]
default = ["std"]
std = []
bevy = ["dep:bevy"]

[lints.rust]
missing_docs = "allow"                  # TODO: document public API before release
missing_debug_implementations = "warn"
unreachable_pub = "warn"

[lints.clippy]
cargo = { level = "warn", priority = -1 }
cargo_common_metadata = "allow"         # TODO: add a README, then drop this

[[example]]
name = "square_grid"
required-features = ["bevy"]

[[example]]
name = "chunked_grid"
required-features = ["bevy"]

[[example]]
name = "mesh_grid"
required-features = ["bevy"]

[[example]]
name = "raycast"
required-features = ["bevy"]

[[example]]
name = "mesh_raycast"
required-features = ["bevy"]

[[example]]
name = "sphere_build"
required-features = ["bevy"]
